feat: change it all to a to-do app
