# cmd/server/main.go
@@ -4,10 +4,9 @@ package main
 import (
 	"github.com/gin-gonic/gin"
 
+	"github.com/brentellingson/learning-golang-api/internal/controller"
 	"github.com/brentellingson/learning-golang-api/internal/docs"
-	"github.com/brentellingson/learning-golang-api/internal/ping"
-	"github.com/brentellingson/learning-golang-api/internal/programming"
-	programmingLib "github.com/brentellingson/learning-golang-lib/programming"
+	"github.com/brentellingson/learning-golang-api/internal/service"
 )
 
 // @Title			Learning Golang API
@@ -15,16 +14,16 @@ import (
 // @Description	This is a simple API to learn Golang
 // @BasePath		/api/v1
 func main() {
-	ping := ping.NewController()
-	programming := programming.NewController(programmingLib.NewService())
-
+	taskService := service.NewTaskService()
+	pingController := controller.NewPingController()
+	taskController := controller.NewTaskController(taskService)
 	router := gin.Default()
 
 	docs.AddRoutes(&router.RouterGroup)
 	v1 := router.Group("/api/v1/")
 	{
-		ping.AddRoutes(v1)
-		programming.AddRoutes(v1)
+		pingController.AddRoutes(v1)
+		taskController.AddRoutes(v1)
 	}
 
 	router.Run(":8080")
