# internal/dto/ping.go
@@ -1,0 +1,6 @@
+package dto
+
+// PingResponse represents the response for the ping endpoint.
+type PingResponse struct {
+	Message string `json:"message"`
+}
